mdapipkg/unpackaged/objects/Dish_Transaction_History__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_date__c</fullName>
        <label>Change date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <label>Changed By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dish_S_E_Act__c</fullName>
        <label>Dish S&amp;E Activity</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dish_S_E__c</fullName>
        <label>Dish S&amp;E</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_id__c</fullName>
        <label>Library id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nw_Dish_Acct_No__c</fullName>
        <label>New Dish Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Dish_Acct_No__c</fullName>
        <label>Old Dish Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <label>SO Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seq_Number__c</fullName>
        <label>Sequence Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Dish Transaction History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dish Transaction History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dish Transaction Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>